--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ header {
       padding: 15px 20px;
       position: sticky;
       top: 0;
-      z-index: 1000;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -35,46 +34,23 @@ header {
     letter-spacing: 1px;
 }
 nav ul {
-    display: flex;
     list-style: none;
 }
 nav ul li {
     margin-left: 20px;
 }
-a {
+li a{
+    text-decoration: none;
+    color: var(--light);
+}
+ul li {
     color: var(--light);
     text-decoration: none;
     font-size: 16px;
     transition: 0.3s;
+    display: inline-block;
 }
 nav ul li a:hover {
-    color: var(--accent);
-}
-.bottom-nav {
-    display: none;
-}
-
-.bottom-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    background: var(--primary);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px 0;
-    z-index: 1000;
-}
-
-.bottom-nav ul li a {
-    color: var(--light);
-    text-decoration: none;
-    font-size: 16px;
-    transition: 0.3s;
-}
-
-.bottom-nav ul li a:hover {
     color: var(--accent);
 }
 .About .About1{
@@ -199,4 +175,38 @@ footer{
     color: var(--primary);
     text-align: center;
 }
-
+.Menu-line{
+    height: 3px;
+    width: 25px;
+    background-color: var(--light);
+    margin-bottom: 3px;
+}
+.Menu{
+    cursor: pointer;
+    display: none;
+}
+@media all and (max-width:800px){
+    header{
+        flex-direction: column;
+    }
+    ul{
+        display: none;
+    }
+    ul li{
+        display: block;
+        text-align: center;
+        padding: 5px 0px;
+    }
+    .logo{
+        align-self: flex-start;
+    }
+    .Menu{
+        display: inline-block;
+        position: absolute;
+        align-self: flex-end;
+        margin-top: 10px;
+    }
+    .showmenu{
+        display: block;
+    }
+}
