--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ nav ul li a:hover {
     border-color: var(--dark);
     border-style: solid;
     text-align: center;
-    display: inline-block;
+    display: block;
     margin: 10px;
     background-color: var(--dark);
     color: var(--light);
